--- a/examples/pooling-imputing-ex.ipynb
+++ b/examples/pooling-imputing-ex.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "# force PYTHONPATH to look into the project directory for modules\n",
+    "rootdir = os.path.dirname(os.path.dirname(os.getcwd()))\n",
+    "sys.path.insert(0, rootdir)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Pooling-imputation performance from real bead chip data\n",
