Set up pooling on LD coverage markers

--- a/python/omniexpress_20200710.ipynb
+++ b/python/omniexpress_20200710.ipynb
@@ -14,17 +14,17 @@
     "Performs imputation on data from the chromosome 20 of 1000GP on not pooled data.\n",
     "The 1KGP data spans from POS 60,343 to POS 62,965,354 i.e. a size of ca. 63Mb.\n",
     "\n",
-    "Target markers have been chosen as the intersection between the real bead chip Illumina Infinium OmniExpress2.5 - 8 Kit\n",
+    "The reference markers have been chosen as the intersection between the real bead chip Illumina Infinium OmniExpress2.5 - 8 Kit\n",
     " and the chr20 1000GP data. These are ca. 52,900 markers which corresponds to a density of approx. 1 SNP per 1,19 kb \n",
-    " (bibliography Beagle07 mentions 1 SNP per 1 kb for low-density coverage).\n",
-    "The reference markers from the intersection between the real bead chip Illumina Infinium OmniExpress - 24 Kit\n",
+    " (bibliography Beagle07 mentions 1 SNP per 1 kb for high-density coverage).\n",
+    "Target markers from the intersection between the real bead chip Illumina Infinium OmniExpress - 24 Kit\n",
     " and the chr20 1000GP data. These are ca. 17,791 markers which corresponds to a density of approx. 1 SNP per 3,35 kb \n",
-    " (bibliography Beagle07 mentions 1 SNP per 3 kb for high-density coverage).\n",
+    " (bibliography Beagle07 mentions 1 SNP per 3 kb for low-density coverage).\n",
     " \n",
     "The samples are assigned to the reference panel or the study population in the same layout as imputing pooled samples\n",
     "  on high-density genotyped markers (see 20200709).\n",
     "\n",
-    "Apply pooling simulation on this data, and imputation (run parallel execution): \n",
+    "No pooling simulation on this data, and imputation (run parallel execution): \n",
     "**pool and impute bead chip markers only, compute metrics and plot statistics** "
    ]
   },
