Documented Rackham processing

--- a/python/omniexpress_20200728.ipynb
+++ b/python/omniexpress_20200728.ipynb
@@ -401,7 +401,64 @@
    "cell_type": "markdown",
    "source": [
     "### Run imputation\n",
-    "With Phaser, on Rackham"
+    "With Phaser, on Rackham. Use gcc compiled version, no `--march`\n",
+    "Steps:\n",
+    "\n",
+    "1. Prepare phaser folders and scripts\n",
+    "```bash\n",
+    "cd phaser/\n",
+    "mkdir omniexpressLD && cd omniexpressLD\n",
+    "cp ../omniexpress/run_omniHD_snowy.s* ./\n",
+    "mv run_omniHD_snowy.sh run_omniLD_snowy.sh\n",
+    "mv run_omniHD_snowy.sbatch run_omniLD_snowy.sbatch\n",
+    "```\n",
+    "\n",
+    "Modify contents of `.sh` and `.sbatch` scripts\n",
+    "```bash\n",
+    "nano run_omniLD_snowy.sh\n",
+    "```\n",
+    "set to \n",
+    "```\n",
+    "# all paths are relative phaser/   (assumed this script is executed from phaser/omniexpressLD)\n",
+    "cd ..\n",
+    "\n",
+    "ne=11418\n",
+    "#error=0.001\n",
+    "error=0.00001\n",
+    "mapfile=examples/5_snps_interpolated_HapMap2_map_20\n",
+    "indir=omniexpressLD/\n",
+    "sample=$SLURM_ARRAY_TASK_ID\n",
+    "samples_file=IMP.chr20.pooled.snps.gl.vcf.gz\n",
+    "ref_file=omniexpressLD/REF.chr20.snps.gt.vcf.gz\n",
+    "results_directory=omniexpressLD/LDLD/\n",
+    "\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "nano run_omniLD_snowy.sbatch\n",
+    "```\n",
+    "\n",
+    "set to\n",
+    "\n",
+    "```\n",
+    "#!/bin/bash -l\n",
+    "#SBATCH -A snic2019-8-216\n",
+    "#SBATCH -p node\n",
+    "#SBATCH -C mem128GB\n",
+    "#SBATCH -n 16\n",
+    "#SBATCH -t 2-00:00:00\n",
+    "#SBATCH -J omni_LD\n",
+    "### assumes current directory is /crex/proj/snic2019-8-216/private/phaser/omniexpressLD\n",
+    "module load bioinfo-tools\n",
+    "module load bcftools/1.9\n",
+    "module load tabix/0.2.6\n",
+    "bash run_omniLD_snowy.sh # should use 16 OMP threads\n",
+    "```\n",
+    "\n",
+    "2. Transfer experimental VCF files from local\n",
+    "```bash\n",
+    "~/PoolImpHuman/data/20200728$ scp *.vcf.gz* camcl609@rackham.uppmax.uu.se:/crex/proj/snic2019-8-216/private/phaser/omniexpressLD\n",
+    "```"
    ],
    "metadata": {
     "collapsed": false,
