Implemented pooling data in arallel and decode to GT

--- a/python/omniexpress_20200709.ipynb
+++ b/python/omniexpress_20200709.ipynb
@@ -16,8 +16,8 @@
     " (https://support.illumina.com/array/array_kits/humanomniexpress2.5-8-beadchip-kit/downloads.html) \n",
     " and the chr20 1000GP data. The samples are randomly assigned to the reference panel or the study population.\n",
     "\n",
-    "Apply pooling simulation on this data, and imputation (run parallel execution): \n",
-    "**pool and impute bead chip markers only, compute metrics and plot statistics** "
+    "Apply pooling simulation on this data, and decode into GT (run parallel execution): \n",
+    "**pool bead chip markers only, for computing stats/plotting in EDA later** "
    ]
   },
   {
